# whoami

./: Cargo.toml  README.md  justfile  rustwrap.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: audit.yml  gate-code.yml  release.yml
cli/src/: main.rs
cli/tests/: cli.rs
whoami/: Cargo.toml
whoami/src/: lib.rs  main.rs
