[package]
name = "whoamiaws"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
aws-config = { version = "0.56.1", default-features = false, features = ["rustls"] }
aws-sdk-sts = "0.30.0"
aws-types = "0.56.1"
clap = { version = "4.4.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
mockall = "0.11.4"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
rand = "0.8.5"
rstest = "0.18.2"

[features]
aws_configured = []

